# botasaurus-driver

./: README.md  connection.py  increment_version.py  package.json  pyproject.toml  setup.cfg  setup.py  test.py
botasaurus_driver/: __init__.py  base_data.py  driver copy 3.py  driver copy.py  driver.py  driver_utils.py  exceptions.py  lang.py  local_storage_driver.py  opponent.py  profile.py  requests.py  solve_cloudflare_captcha.py  tiny_profile.py  user_agent.py  window_size.py
botasaurus_driver/cdp/: README.md  __init__.py  accessibility.py  animation.py  audits.py  autofill.py  background_service.py  browser.py  cache_storage.py  cast.py  console.py  css.py  database.py  debugger.py  device_access.py  device_orientation.py  dom.py  dom_debugger.py  dom_snapshot.py  dom_storage.py  emulation.py  event_breakpoints.py  fed_cm.py  fetch.py  headless_experimental.py  heap_profiler.py  indexed_db.py  input_.py  inspector.py  io.py  layer_tree.py  log.py  media.py  memory.py  network.py  overlay.py  page.py  performance.py  performance_timeline.py  preload.py  (+13 more)
botasaurus_driver/core/: _contradict.py  browser.py  config.py  connection.py  custom_storage_cdp.py  element.py  env.py  profiles.py  retry_on_error.py  tab.py  util.py
